# functions/type/request.py
@@ -1,6 +1,6 @@
 """関数アプリのHTTPトリガーのリクエストボディの型定義"""
 
-from typing import List, TypedDict
+from typing import List, Optional, TypedDict
 
 
 class PutEn2JaReq(TypedDict):
@@ -9,3 +9,16 @@ class PutEn2JaReq(TypedDict):
     """
 
     __root__: List[str]
+
+
+class PostProgressReq(TypedDict):
+    """
+    [POST] /tests/{testId}/progresses/{questionNumber} のリクエストボディの型
+    """
+
+    isCorrect: bool
+    choiceSentences: List[str]
+    choiceImgs: List[Optional[str]]
+    choiceTranslations: Optional[List[str]]
+    selectedIdxes: List[int]
+    correctIdxes: List[int]
